--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash && ./node_modules/.bin/jsdoc ./server -r -d docs",
+    "postinstall": "./node_modules/.bin/jsdoc ./server -r -d docs",
     "start": "nodemon --ignore node_modules server",
-    "test": "mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;",
+    "test": "mocha",
     "lint": "eslint ./"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "lodash": "^4.17.4",
     "mysql": "^2.12.0",
     "node-mocks-http": "^1.6.1",
+    "nodemon": "^2.0.2",
     "request": "^2.34.0"
   },
   "devDependencies": {
